exports[`test calls ImagePicker if pickImage is true 1`] = `
Array [
  Array [
    Object {
      "avatarURL": "heythere",
      "type": "SELECT_KID_IMAGE",
    },
  ],
  Array [
    Object {
      "type": "NEXT_STEP",
    },
  ],
  Array [
    [Function],
  ],
  Array [
    [Function],
  ],
]
`;

exports[`test renders the <SetImage> component 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
    }
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "#FFF",
        "fontFamily": "Raleway-ExtraBold",
        "fontSize": 30,
        "marginBottom": -2,
        "textAlign": "center",
        "textShadowColor": "rgba(75, 73, 73, 0.8)",
        "textShadowOffset": Object {
          "height": 3,
          "width": 3,
        },
        "textShadowRadius": 20,
      }
    }>
    Thanks, 
    Name
    !
  </Text>
  <View
    style={
      Object {
        "height": 32,
      }
    } />
  <Image
    animation={undefined}
    duration={undefined}
    iterationCount={undefined}
    source={1}
    style={
      Object {
        "borderColor": undefined,
        "borderRadius": 102,
        "borderWidth": 5.828571428571428,
        "height": 204,
        "marginBottom": 20.4,
        "shadowColor": "rgba(0,0,0,0.5)",
        "shadowOffset": Object {
          "height": 2,
        },
        "shadowRadius": 5,
        "width": 204,
      }
    } />
  <View
    style={
      Object {
        "height": 32,
      }
    } />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "#FFF",
        "fontFamily": "Raleway-Regular",
        "fontSize": 16,
      }
    }>
    Now, let\'s set a picture for 
    Jeff
    .
  </Text>
  <View
    style={
      Object {
        "height": 24,
      }
    } />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Object {
        "backgroundColor": "transparent",
        "color": "#FFF",
        "fontFamily": "Raleway-Regular",
        "fontSize": 16,
      }
    }>
    Don\'t worry, only you will be able to see it.
  </Text>
  <View
    style={
      Object {
        "height": 32,
      }
    } />
  <View
    style={
      Object {
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": 686,
      }
    }>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 20,
          }
        }>
        Not right now
         
      </Text>
    </View>
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      hitSlop={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "transparent",
          "flexDirection": "row",
          "justifyContent": "center",
          "opacity": 1,
        }
      }
      testID={undefined}>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Object {
            "color": "#FFF",
            "fontFamily": "Raleway-Regular",
            "fontSize": 20,
          }
        }>
        Set a picture for 
        Jeff
         
      </Text>
    </View>
  </View>
</View>
`;

exports[`test uses a default image of pickImage is false 1`] = `
Array [
  Array [
    Object {
      "avatarURL": "http://i.imgur.com/ZrwsRFD.png",
      "type": "SELECT_KID_IMAGE",
    },
  ],
  Array [
    Object {
      "type": "NEXT_STEP",
    },
  ],
  Array [
    [Function],
  ],
  Array [
    [Function],
  ],
]
`;
